--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 #!/usr/bin/env bash
+APP_NAME=demo
 
 # Application
 CONTAINER_WEB_ROOT=/var/www/html
-WEB_ROOT="./app"
+WEB_ROOT=./web/app
 
 # Nginx
 NGINX_HOST=localhost
@@ -14,7 +15,7 @@ NGINX_SSL_PORT=8280
 # See https://hub.docker.com/r/nanoninja/php-fpm/tags/
 PHP_VERSION=latest
 PHP_FPM_PORT=9000
-PHP_FPM_HOST=php-fpm
+PHP_FPM_HOST=php
 
 # MySQL
 MYSQL_VERSION=5.7.22
@@ -24,6 +25,7 @@ MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=root
 MYSQL_USER=dev
 MYSQL_PASSWORD=dev
+MySQL_PORT=33060
 
 #PHPMYADMIN
 PHPMYADMIN_PORT=8283
