--- a/etc/nginx/default.conf
+++ b/etc/nginx/default.conf
@@ -9,12 +9,15 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/html;
+    proxy_request_buffering off;
+    proxy_buffering off;
     location / {
             # This is cool because no php is touched for static content.
             # include the "?$args" part so non-default permalinks doesn't break when using query string
             try_files $uri $uri/ /index.php?$args;
         }
     location ~ \.php$ {
+        proxy_pass http://172.21.0.2:9000;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
