--- a/etc/nginx/default.template.conf
+++ b/etc/nginx/default.template.conf
@@ -8,16 +8,19 @@ server {
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/html;
+    root ${CONTAINER_WEB_ROOT};
+    proxy_request_buffering off;
+    proxy_buffering off;
     location / {
             # This is cool because no php is touched for static content.
             # include the "?$args" part so non-default permalinks doesn't break when using query string
             try_files $uri $uri/ /index.php?$args;
         }
     location ~ \.php$ {
+        proxy_pass http://172.21.0.2:9000;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass ${PHP_FPM_HANDLER};
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
